--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <div class="col-lg-4 col-md-6 mb-4 " style=" max-width:600px; min-width:600px;">
             <div class="text-center">
                 <h2>About Me</h2>
-                <img src="../../assets/profile.jpg" alt="Profile picture" width="256" height="256"
+                <img src="../../assets/profile.png" alt="Profile picture" width="256" height="256"
                     class="rounded-circle">
                 <p style="text-align: center;">Seeking a Spring 2024 internship to apply and expand my expertise in
                     computer
