--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -15,45 +15,45 @@
                             <div class="form-group">
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input position-static me-2"
-                                        [(ngModel)]="typescript">
-                                    (change)="Filter()"
-                                    name="Typescript"
+                                        [(ngModel)]="typescript" (change)="Filter()"
+                                    name="Typescript">
+                                    
                                     <label class="form-check-label small ">Typescript</label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input position-static me-2"
-                                        [(ngModel)]="csharp">
-                                    (change)="Filter()"
-                                    name="Csharp"
+                                        [(ngModel)]="csharp" (change)="Filter()"
+                                    name="Csharp">
+                                    
                                     <label class="form-check-label small ">Csharp</label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input position-static me-2"
-                                        [(ngModel)]="java">
-                                    (change)="Filter()"
-                                    name="Java"
+                                        [(ngModel)]="java" (change)="Filter()"
+                                    name="Java">
+                                    
                                     <label class="form-check-label small ">Java</label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input position-static me-2"
-                                        [(ngModel)]="elixir">
-                                    (change)="Filter()"
-                                    name="Elixir"
+                                        [(ngModel)]="elixir" (change)="Filter()"
+                                    name="Elixir">
+                                   
                                     <label class="form-check-label small ">Elixir</label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input position-static me-2"
-                                        [(ngModel)]="javascript">
-                                    (change)="Filter()"
-                                    name="Javascript"
+                                        [(ngModel)]="javascript" (change)="Filter()"
+                                    name="Javascript">
+                                   
                                     <label class="form-check-label small ">JavaScript</label>
                                 </div>
                             </div>
@@ -64,27 +64,27 @@
                             <div class="form-group">
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input position-static me-2"
-                                        [(ngModel)]="angular">
-                                    (change)="Filter()"
-                                    name="Angular"
+                                        [(ngModel)]="angular" (change)="Filter()"
+                                    name="Angular">
+                                    
                                     <label class="form-check-label small ">Angular</label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input position-static me-2"
-                                        [(ngModel)]="nodejs">
-                                    (change)="Filter()"
-                                    name="Node.Js"
+                                        [(ngModel)]="nodejs"  (change)="Filter()"
+                                    name="Node.Js">
+                                   
                                     <label class="form-check-label small ">Node.Js</label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input position-static me-2"
-                                        [(ngModel)]="react">
-                                    (change)="Filter()"
-                                    name="React"
+                                        [(ngModel)]="react" (change)="Filter()"
+                                    name="React">
+                                    
                                     <label class="form-check-label small ">React</label>
                                 </div>
                             </div>
