--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -1,12 +1,7 @@
-a {
-    display: inline-block;
-    padding: 10px 15px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
+accordion-group::ng-deep .btn-link {
+    color: rgb(255, 255, 255);
 }
 
-a:hover {
-    background-color: #0056b3;
+accordion-group::ng-deep .card-header {
+    background-color: #00b3ff;
 }
