--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,5 +2,16 @@
     <div class="text-center">
         <h1 class="display-4">Supriya Bandal</h1>
         <h3> Software Engineer</h3>
+        <div class="logo">
+            <a href="https://www.linkedin.com/in/supriya-bandal-553ab9184/" target="_blank">
+                <img src="../../assets/linkedin.png" alt="">
+            </a>
+            <a href="https://github.com/supriyabandal2012" target="_blank">
+            <img src="../../assets/git.png" alt="">
+            </a>
+            <a href="https://www.youtube.com/@supriyabandal6033" target="_blank">
+            <img src="../../assets/youtube.png"  alt="">
+            </a>
+        </div>
     </div>
 </div>
