--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,11 @@
-<div class="jumbotron">
+<div class="jumbotron" style="background-image: url(../../assets/header.png);" >
+    
     <div class="text-center">
-        <h1 class="display-4">Supriya Bandal</h1>
-        <h3> Software Engineer</h3>
+        <h1 class="display-4"><strong>Supriya Bandal</strong></h1>
+        <h3> <strong>Software Developer</strong></h3>
         <div class="logo">
             <a href="https://www.linkedin.com/in/supriya-bandal-553ab9184/" target="_blank">
-                <img src="../../assets/linkedin.png" alt="">
+                <img src="../../assets/linkedin.png" style="box-shadow: 0 4px 6px rgba(203, 202, 106, 0.2);">
             </a>
             <a href="https://github.com/supriyabandal2012" target="_blank">
             <img src="../../assets/git.png" alt="">
