--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,20 +4,20 @@
         <div class="col-lg-4 col-md-6 mb-4 " style=" max-width:600px; min-width:600px;">
             <div class="text-center">
                 <h2>About Me</h2>
-                <img src="../../assets/profile.png" alt="Profile picture" width="256" height="256"
+                <img src="../../assets/profile.png" alt="Profile picture" width="235" height="235"
                     class="rounded-circle">
-                <p style="text-align: center;">Seeking a Spring 2024 internship to apply and expand my expertise in
+                <p style="text-align: center;">Seeking a Full-Time Software developer role to apply and expand my expertise in
                     computer
                     science and
                     engineering, while contributing to a dynamic team in a collaboration and innovative
                     environment.</p>
-                <p><b>Expertise: Python, Java, JavaScript, Typescript, AWS services, SQL, Angular,
+                <p><b>Expertise: MERN STACK: React.js, Express.js, Node.js, MongoDB, JavaScript, Typescript, Python, C++, AWS services, SQL, Angular,
                         Version
                         Controls.</b></p>
             </div>
         </div>
         <!-- Feature projects tile -->
-        <div class="col-lg-4 col-md-6 mb-4 " style=" max-width:600px; min-width:600px;">
+        <div class="col-lg-4 col-md-6 mb-4 " style=" max-width:700px; min-width:700px;">
             <div class="text-center">
                 <h2>Feature Project</h2>
                 <h4>{{featuredProject.name}}</h4>
