--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,15 +1,51 @@
 .jumbotron {
     padding: 2rem 1rem;
-    background-color: #e9ecef;
+    position: relative;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-align: center;
+
 }
 .logo{
+    position: absolute;
+    bottom: 0;
+    right: 0;
     display: flex;
-    position: fixed;
-    top: 120px;
-    right: 40px;
+    padding: 20px;
+    
+}
+.logo a img{
+    box-shadow: 0 4px 6px rgba(11, 11, 11, 0.2);
 }
 .logo img{
     width: 30px;
     height: 30px;
     margin-left: 10px;
+    
+}
+.text-center h1, h3{   
+    color: rgb(15, 5, 5);
+    text-shadow: 2px 2px 4px rgba(228, 233, 232, 0.5); 
+    animation: bounce 4s infinite;
+}
+
+@keyframes bounce {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-30px);
+    }
+
+    60% {
+        transform: translateY(-15px);
+    }
 }
